--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "la_tienda_de_lola",
   "version": "1.0.0",
-  "description": "",
+  "description": "Sitio Web de la tienda de Lola",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
