--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "hover.css": "^2.3.2",
     "node-sass": "^6.0.1",
     "nodemon": "^2.0.12"
   }
